Edited wiki page through web user interface.

--- a/wiki/Overview.wiki
+++ b/wiki/Overview.wiki
@@ -1,4 +1,5 @@
 #summary Overview
+#labels Featured
 
 bbv.Common consists of several mostly independent components developed at [http://www.bbv.ch bbv Software Services AG]:
 
