Edited wiki page through web user interface.

--- a/wiki/DefaultSideBar.wiki
+++ b/wiki/DefaultSideBar.wiki
@@ -1,6 +1,6 @@
   * [Overview]
   * Components
-    * [EventBroker Event Broker
+    * [EventBroker Event Broker]
     * [StateMachine Hierarchical State Machine]
     * [AsyncModule Asynchrous Modules]
     * [HashService Hash Service]
