Edited wiki page through web user interface.

--- a/wiki/StateMachine.wiki
+++ b/wiki/StateMachine.wiki
@@ -31,6 +31,8 @@
 
 [StateMachineExceptionHandling Exception Handling]
 
+[StateMachineExtensions Extensions]
+
 [StateMachineLogging Logging]
 
 [StateMachineReport Report]
