Edited wiki page DefaultSideBar through web user interface.

--- a/wiki/DefaultSideBar.wiki
+++ b/wiki/DefaultSideBar.wiki
@@ -2,6 +2,7 @@
   * Components
     * [EventBroker Event Broker]
     * [StateMachine Hierarchical State Machine]
+    * [EvaluationEngine Evaluation Engine]
     * [AsyncModule Asynchrous Modules]
     * [HashService Hash Service]
   * [Sponsors]
