Edited wiki page EvaluationEngine through web user interface.

--- a/wiki/EvaluationEngine.wiki
+++ b/wiki/EvaluationEngine.wiki
@@ -8,4 +8,6 @@ The evaluation engine is currently an alpha release (under development).
 
 = Details =
 
+[EvaluationEngineSpecification Specification]
+
 _more to come soon_
