--- a/wiki/EvaluationEngine.wiki
+++ b/wiki/EvaluationEngine.wiki
@@ -6,7 +6,7 @@ The evaluation engine provides an infrastructure for decoupled evaluation.
 
 The evaluation engine is currently an alpha release (under development).
 
-= Details =
+[EvaluationEngineTutorial Tutorial]
 
 [EvaluationEngineSpecification Specification]
 
