Edited wiki page EvaluationEngineTutorial through web user interface.

--- a/wiki/EvaluationEngineTutorial.wiki
+++ b/wiki/EvaluationEngineTutorial.wiki
@@ -1,5 +1,5 @@
 #summary Evaluation engine tutorial showing the basic usage.
-#labels Tutorial
+#labels Tutorial,EvaluationEngine
 
 The questioner has two questions that have to be answered
 
