--- a/wiki/EvaluationEngineTutorial.wiki
+++ b/wiki/EvaluationEngineTutorial.wiki
@@ -106,16 +106,15 @@ knowing that sample Text has 3 vowels is  extremely super fantastic cool!
 You can use the Log4NetExtension to log using log4net (or your own logging extension for other logging frameworks).
 Answering the coolness question results in the following log:
 {{{
-INFO - Question = bbv.Common.EvaluationEngine.HowCoolIsTheEvaluationEngine
+INFO - Question = how cool is the evaluation engine?
 Answer =  extremely super fantastic
 Used strategy = aggregator strategy
 Used Aggregator = expression aggregator with seed '' and aggregate function (aggregate, value) => ((aggregate + " ") + value)
-Expressions = inline expression = (q, p) => "extremely" => extremely, inline expression = (q, p) => "super" => super, inline expression = (q, p) => "fantastic" => fantastic
-}}}
+Expressions = inline expression = (q, p) => "extremely" => extremely, inline expression = (q, p) => "super" => super, inline expression = (q, p) => "fantastic" => fantastic}}}
 
 Answering the vowel counting results in the following log:
 {{{
-INFO - Question = bbv.Common.EvaluationEngine.HowManyVowelsAreInThisText
+INFO - Question = how many Small vowels are in this text?
 Parameter = sample Text
 Answer = 3
 Used strategy = aggregator strategy
