--- a/wiki/EvaluationEngine.wiki
+++ b/wiki/EvaluationEngine.wiki
@@ -1,13 +1,12 @@
 #summary Evaluation engine (still alpha)
 
-= Introduction =
+= Features =
 
 The evaluation engine provides an infrastructure for decoupled evaluation.
 
 The evaluation engine is currently an alpha release (under development).
 
+= Documentation =
 [EvaluationEngineTutorial Tutorial]
 
 [EvaluationEngineSpecification Specification]
-
-_more to come soon_
