--- a/wiki/EvaluationEngineTutorial.wiki
+++ b/wiki/EvaluationEngineTutorial.wiki
@@ -110,7 +110,10 @@ INFO - Question = how cool is the evaluation engine?
 Answer =  extremely super fantastic
 Used strategy = aggregator strategy
 Used Aggregator = expression aggregator with seed '' and aggregate function (aggregate, value) => ((aggregate + " ") + value)
-Expressions = inline expression = (q, p) => "extremely" => extremely, inline expression = (q, p) => "super" => super, inline expression = (q, p) => "fantastic" => fantastic
+Expressions =
+    inline expression = (q, p) => "extremely" => extremely
+    inline expression = (q, p) => "super" => super
+    inline expression = (q, p) => "fantastic" => fantastic
 }}}
 
 Answering the vowel counting results in the following log:
@@ -120,5 +123,10 @@ Parameter = sample Text
 Answer = 3
 Used strategy = aggregator strategy
 Used Aggregator = expression aggregator with seed '0' and aggregate function (aggregate, value) => (aggregate + value)
-Expressions = counts the number of a => 1, counts the number of e => 2, counts the number of i => 0, counts the number of o => 0, counts the number of u => 0
+Expressions =
+    counts the number of a => 1
+    counts the number of e => 2
+    counts the number of i => 0
+    counts the number of o => 0
+    counts the number of u => 0
 }}}
