Edited wiki page StateMachine through web user interface.

--- a/wiki/StateMachine.wiki
+++ b/wiki/StateMachine.wiki
@@ -8,10 +8,10 @@
     * entry and exit actions
   * transition guards
   * hierarchical
-    * different history behaviours to initialize state always to same state or last active state
+    * different history behaviors to initialize state always to same state or last active state
   * fluent definition interface
   * synchronous/asynchronous state machine
-    * passive state machine handles state transitions synchronuously
+    * passive state machine handles state transitions synchronously
     * active state machine handles state transitions asynchronously on the worker thread of the state machine
   * configurable thorough logging simplifies debugging using log4net
   * state machine report for textual description of state machine
