--- a/wiki/EvaluationEngine.wiki
+++ b/wiki/EvaluationEngine.wiki
@@ -1,10 +1,20 @@
 #summary Summary of the evaluation engine (still alpha)
-
-= Features =
+#labels EvaluationEngine
 
 The evaluation engine provides an infrastructure for decoupled evaluation.
 
 The evaluation engine is currently an alpha release (under development).
+
+= Features =
+
+  * The evaluation engine provides a single entry point to ask questions (queries, calculations, ...)
+  * Questioner is completely decoupled from answer finding algorithm.
+  * Hierarchical evaluation engines (children inherit knowledge from parent)
+  * Solution definitions can be loaded from modules or plug-ins.
+  * Extensible to solve any kind of question (validation rules, status queries, …)
+  * Fluent definition syntax allowing constraints, strategies, aggregators and multiple expressions per question.
+  * Thorough customizable logging.
+
 
 = Documentation =
 [EvaluationEngineTutorial Tutorial]
