Edited wiki page EvaluationEngine through web user interface.

--- a/wiki/EvaluationEngine.wiki
+++ b/wiki/EvaluationEngine.wiki
@@ -1,5 +1,5 @@
 #summary Summary of the evaluation engine (still alpha)
-#labels EvaluationEngine
+#labels EvaluationEngine,Featured
 
 The evaluation engine provides an infrastructure for decoupled evaluation.
 
